--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Skeletal Labs
 description: Building bit by bit
 
 # Your name to show in the footer
-author: @skeleletallabs
+author: skeleletallabs
 
 # --- List of links in the navigation bar --- #
 
