--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ author: skeleletallabs
 
 # --- List of links in the navigation bar --- #
 
-navbar-links:
-  About Me: "aboutme"
+# navbar-links:
+#  About Me: "aboutme"
 
 # --- Logo --- #
 
