--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Skeletal Labs
 
 # Short description of your site
-description: Building bit by bit
+description: Democratizing the power of data, bit by bit
 
 # Your name to show in the footer
 author: skeleletallabs
